WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268830
[Cocoa] Netflix.com key renewal fails, causes playback errors, stuttering.
https://bugs.webkit.org/show_bug.cgi?id=268830
Summary
[Cocoa] Netflix.com key renewal fails, causes playback errors, stuttering.
Jer Noble
Reported
2024-02-06 09:20:33 PST
[Cocoa] Netflix.com key renewal fails, causes playback errors, stuttering.
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2024-02-06 09:20:40 PST
<
rdar://problem/121931039
>
Jer Noble
Comment 2
2024-02-06 09:24:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23927
EWS
Comment 3
2024-02-06 14:26:14 PST
Committed
274172@main
(8c14e2cb8214): <
https://commits.webkit.org/274172@main
> Reviewed commits have been landed. Closing PR #23927 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug